# sports_manage_system

./: .gitignore  CMakeLists.txt  README.md  sports.db
include/: adminwindow.h  athwindow.h  judgewindow.h  tcomboboxdelegate.h  tdialoglogin.h
res/: res.qrc
src/: adminwindow.cpp  adminwindow.ui  athwindow.cpp  athwindow.ui  dialog.ui  dialogrecord.ui  judgewindow.cpp  judgewindow.ui  main.cpp  tcomboboxdelegate.cpp  tdialoglogin.cpp  tdialoglogin.ui
